FAC-573: Refactor - Move GetAssessmentProgressPort from service to SubmitAnswerNotificationCreator