@@ -5,6 +5,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.flickit.assessment.common.application.domain.notification.NotificationCreator;
 import org.flickit.assessment.common.application.domain.notification.NotificationEnvelope;
 import org.flickit.assessment.core.application.port.out.assessment.GetAssessmentPort;
+import org.flickit.assessment.core.application.port.out.assessment.GetAssessmentProgressPort;
 import org.flickit.assessment.core.application.port.out.user.LoadUserPort;
 import org.flickit.assessment.core.application.service.answer.notification.SubmitAnswerNotificationPayload.AssessmentModel;
 import org.flickit.assessment.core.application.service.answer.notification.SubmitAnswerNotificationPayload.UserModel;
@@ -21,13 +22,13 @@ import java.util.List;
 public class SubmitAnswerNotificationCreator implements
     NotificationCreator<SubmitAnswerNotificationCmd> {
 
+    private final GetAssessmentProgressPort getAssessmentProgressPort;
     private final GetAssessmentPort getAssessmentPort;
     private final LoadUserPort loadUserPort;
 
     @Override
     public List<NotificationEnvelope> create(SubmitAnswerNotificationCmd cmd) {
-        if (cmd.assessmentId() == null) return Collections.emptyList();
-
+        var progress = getAssessmentProgressPort.getProgress(cmd.assessmentId());
         var assessment = getAssessmentPort.getAssessmentById(cmd.assessmentId());
         var user = loadUserPort.loadById(cmd.assessorId());
 
@@ -36,12 +37,12 @@ public class SubmitAnswerNotificationCreator implements
             return List.of();
         }
 
-        return List.of(
-            new NotificationEnvelope(cmd.targetUserId(), new SubmitAnswerNotificationPayload(
-                new AssessmentModel(assessment.get().getId(), assessment.get().getTitle()),
-                new UserModel(user.get().getId(), user.get().getDisplayName())
-            ))
-        );
+        return (progress.answersCount() == progress.questionsCount())
+            ? List.of(new NotificationEnvelope(cmd.targetUserId(), new SubmitAnswerNotificationPayload(
+            new AssessmentModel(assessment.get().getId(), assessment.get().getTitle()),
+            new UserModel(user.get().getId(), user.get().getDisplayName()))))
+
+            : Collections.emptyList();
     }
 
     @Override
